Fixed a slight styling-error in the projects-tab on Safari-only when using the Squeejee-theme.
This commit references issue #250.


git-svn-id: svn://evil-dev.net:3690/redmine-collapse/trunk@117 1809a232-8a5f-0410-be6b-a332444e9cb2

--- a/assets/stylesheets/collapse.css
+++ b/assets/stylesheets/collapse.css
@@ -761,6 +761,7 @@ html>body #content {
     display: block;
     color: #8C8C8C;
     text-decoration: none;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.8);
     padding: 4px 10px 4px 0px;
     font-weight: bold;
 }
